<resources>
    <string name="app_name">MathQuizFlash</string>
    <string name="addition">Addition</string>
    <string name="division">Division</string>
    <string name="fractions">Fractions</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="back">Back</string>
    <string name="select_an_operation">Select an Operation</string>
</resources>